--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,10 @@ google-services.json
 freeline.py
 freeline/
 freeline_project_description.json
+
+#ignored .idea
+F:\Programming\Project for GitHub\Instant_Messaging\LightSpeak_Server\.idea
+F:\Programming\Project for GitHub\Instant_Messaging\LigntSpeak_App\.idea
+
+#ignored build
+F:\Programming\Project for GitHub\Instant_Messaging\LightSpeak_Server\build
